--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -41,32 +41,36 @@
             </div>
         </header>
         <nav class="demo-navigation mdl-navigation mdl-color--blue-grey-800">
-            <a class="mdl-navigation__link" (click)="SelectGeneral()">
+            <a class="mdl-navigation__link left-side-tab-menu" (click)="SelectGeneral()">
                 <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">home</i> General
             </a>
-
-            <a class="mdl-navigation__link" (click)="SelectSale()">
+            <a class="mdl-navigation__link left-side-tab-menu" (click)="SelectSale()">
                 <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">attach_money</i> Sale
             </a>
-            <a class="mdl-navigation__link" (click)="SelectPurchase()">
+            <a class="mdl-navigation__link left-side-tab-menu" (click)="SelectPurchase()">
                 <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">shopping_cart</i> Purchase
             </a>
-            <a class="mdl-navigation__link" (click)="SelectAccounting()">
+            <a class="mdl-navigation__link left-side-tab-menu" (click)="SelectAccounting()">
                 <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">credit_card</i> Accounting
             </a>
-            <a class="mdl-navigation__link" (click)="SelectAP()">
-                <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">flag</i> AP</a>
-            <a class="mdl-navigation__link" (click)="SelectAR()">
-                <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">local_offer</i> AR</a>
-            <a class="mdl-navigation__link" (click)="SelectStock()">
-                <i class="fa fa-cubes fa-2x" aria-hidden="true"></i> Stocks</a>
-            <a class="mdl-navigation__link" (click)="SelectHumanResource()">
+            <a class="mdl-navigation__link left-side-tab-menu" (click)="SelectAP()">
+                <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">flag</i> Acc. Payable
+            </a>
+            <a class="mdl-navigation__link left-side-tab-menu" (click)="SelectAR()">
+                <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">local_offer</i> Acc. Receivable
+            </a>
+            <a class="mdl-navigation__link left-side-tab-menu" (click)="SelectStock()">
+                <i class="fa fa-cubes fa-2x" aria-hidden="true" role="presentation"></i> Stocks
+            </a>
+            <a class="mdl-navigation__link left-side-tab-menu" (click)="SelectHumanResource()">
                 <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">supervisor_account</i> Human Resource
             </a>
             <a class="mdl-navigation__link li-link" [routerLink]="['/main', {outlets: {'main-detail': ['search-customer']}}]">
-                <i class="fa fa-bar-chart-o fa-2x" aria-hidden="true"></i> Report</a>
+                <i class="fa fa-bar-chart-o fa-2x" aria-hidden="true" role="presentation"></i> Report
+            </a>
             <a class="mdl-navigation__link li-link" (click)="SelectSetting()">
-                <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">setting</i> Setting</a>
+                <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">setting</i> Setting
+            </a>
             <div class="mdl-layout-spacer"></div>
             <a class="mdl-navigation__link" href="">
                 <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">help_outline</i>
