--- a/src/app/components/uom/edit-uom/edit-uom.component.html
+++ b/src/app/components/uom/edit-uom/edit-uom.component.html
@@ -1,3 +1,128 @@
-<p>
-  edit-uom works!
-</p>
+<div class="mdl-grid demo-content">
+    <div class="demo-charts mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid">
+        <div class="demo-options mdl-card mdl-color--deep-purple-500 mdl-shadow--2dp mdl-cell mdl-cell--4-col
+         mdl-cell--12-col-tablet mdl-cell--12-col-desktop header-section">
+            <h4 class="header-detail">Uom Details</h4>
+        </div>
+        <div class="mdl-cell mdl-cell--12-col">
+            <button (click)="NewUom()" id="btnNew" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised mdl-button--add ">
+                <i class="material-icons">create</i> New
+              </button>
+            <div class="mdl-tooltip" data-mdl-for="btnNew">
+                New Uom
+            </div>
+            <button (click)="SaveUom()" id="btnSave" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised mdl-button--save ">
+              <i class="material-icons">save</i> Save
+            </button>
+            <div class="mdl-tooltip" data-mdl-for="btnSave">
+                Save Uom
+            </div>
+            <button (click)="DeleteUom()" id="btnDelete" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised mdl-button--delete ">
+                <i class="material-icons">delete</i> Delete
+              </button>
+            <div class="mdl-tooltip" data-mdl-for="btnDelete">
+                Delete Uom
+            </div>
+            <button (click)="BacktoSearchUom()" id="btnBackSearch" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised mdl-button--back2search ">
+              <i class="material-icons">reply</i> Search
+            </button>
+            <div class="mdl-tooltip" data-mdl-for="btnBackSearch">
+                Back to Search
+            </div>
+            <button (click)="ExitUom()" id="btnExit" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised mdl-button--exit ">
+                <i class="material-icons">exit_to_app</i> Exit
+              </button>
+            <div class="mdl-tooltip" data-mdl-for="btnExit">
+                Exit Uom
+            </div>
+        </div>
+        <div class="mdl-cell mdl-cell--6-col">
+            <ul class="demo-list-control mdl-list">
+                <li class="mdl-list__item">
+                    <span class="mdl-list__item-primary-content">
+                  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                    <input class="mdl-textfield__input" type="text" id="uomCode"
+                    [(ngModel)]="Uom.UomCode" >
+                    <label class="mdl-textfield__label" for="sample1">Uom Code</label>
+                  </div>
+                </span>
+                </li>
+                <li class="mdl-list__item">
+                    <span class="mdl-list__item-primary-content">
+                  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                    <input class="mdl-textfield__input" type="text" id="uomNameTh"
+                    [(ngModel)]="Uom.UomNameTh" >
+                    <label class="mdl-textfield__label" for="sample1">Uom Name Th</label>
+                  </div>
+                </span>
+                </li>
+                <li class="mdl-list__item">
+                    <span class="mdl-list__item-primary-content">
+                  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                    <input class="mdl-textfield__input" type="text" id="uomNameEn"
+                    [(ngModel)]="Uom.UomNameEn" >
+                    <label class="mdl-textfield__label" for="sample1">Uom Name En</label>
+                  </div>
+                </span>
+                </li>
+                <li class="mdl-list__item">
+                    <span class="mdl-list__item-primary-content">
+                  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                    <input class="mdl-textfield__input" type="text" id="uomNameCn"
+                    [(ngModel)]="Uom.UomNameCn" >
+                    <label class="mdl-textfield__label" for="sample1">Uom Name Cn</label>
+                  </div>
+                </span>
+                </li>
+                <li class="mdl-list__item">
+                    <span class="mdl-list__item-primary-content">
+                      <label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="switch-2">
+                        <input type="checkbox" id="switch-2" class="mdl-switch__input">
+                        <span class="mdl-switch__label">Container ?</span>
+                    </label>
+                    </span>
+                </li>
+            </ul>
+        </div>
+        <div class="mdl-cell mdl-cell--6-col">
+            <ul class="demo-list-control mdl-list">
+                <li class="mdl-list__item">
+                    <span class="mdl-list__item-primary-content">
+                  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                    <input class="mdl-textfield__input text-readonly" type="text" id="createBy"
+                    [(ngModel)]="Uom.CreateBy" [readonly]="true">
+                    <label class="mdl-textfield__label" for="sample1">Create By</label>
+                  </div>
+                </span>
+                </li>
+                <li class="mdl-list__item">
+                    <span class="mdl-list__item-primary-content">
+                  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                    <input class="mdl-textfield__input text-readonly" type="text" id="createDate"
+                    [(ngModel)]="Uom.CreateDate" [readonly]="true">
+                    <label class="mdl-textfield__label" for="sample1">Create Date</label>
+                  </div>
+                </span>
+                </li>
+                <li class="mdl-list__item">
+                    <span class="mdl-list__item-primary-content">
+                  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                    <input class="mdl-textfield__input text-readonly" type="text" id="updateBy"
+                    [(ngModel)]="Uom.UpdateBy" [readonly]="true">
+                    <label class="mdl-textfield__label" for="sample1">Update By</label>
+                  </div>
+                </span>
+                </li>
+                <li class="mdl-list__item">
+                    <span class="mdl-list__item-primary-content">
+                  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                    <input class="mdl-textfield__input text-readonly" type="text" id="updateDate"
+                    [(ngModel)]="Uom.UpdateDate" [readonly]="true">
+                    <label class="mdl-textfield__label" for="sample1">Update Date</label>
+                  </div>
+                </span>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
