--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -18,6 +18,14 @@
           <i class="fa fa-sign-in" aria-hidden="true"></i> Sign in
           <div class="ripples buttonRipples"><span class="ripplesCircle"></span></div>
         </button>
+        <button (click)="GetMasterNewCode()" type="button" class="button buttonBlue">
+          <i class="fa fa-sign-in" aria-hidden="true"></i> Create Master Code
+          <div class="ripples buttonRipples"><span class="ripplesCircle"></span></div>
+        </button>
+        <button (click)="GetTransactionNewCode()" type="button" class="button buttonBlue">
+          <i class="fa fa-sign-in" aria-hidden="true"></i> Create Transaction Code
+          <div class="ripples buttonRipples"><span class="ripplesCircle"></span></div>
+        </button>
         <div class="group">
             <div class="new-account">
                 <a (click)="GotoSignup()">Not have an Account?</a>
