--- a/src/app/components/supplier/edit-supplier/edit-supplier.component.html
+++ b/src/app/components/supplier/edit-supplier/edit-supplier.component.html
@@ -1,3 +1,210 @@
-<p>
-  edit-supplier works!
-</p>
+<div class="mdl-grid demo-content">
+    <div class="demo-charts mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid">
+        <div class="demo-options mdl-card mdl-color--deep-purple-500 mdl-shadow--2dp mdl-cell mdl-cell--4-col
+       mdl-cell--12-col-tablet mdl-cell--12-col-desktop header-section edit-header-section">
+            <h4 class="header-detail">Supplier Details</h4>
+        </div>
+        <div class="mdl-cell mdl-cell--12-col">
+            <button (click)="NewSupplier()" id="btnNew" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised mdl-button--add ">
+              <i class="material-icons">create</i> New
+            </button>
+            <div class="mdl-tooltip" data-mdl-for="btnNew">
+                New Supplier
+            </div>
+            <button (click)="SaveSupplier()" id="btnSave" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised mdl-button--save ">
+            <i class="material-icons">save</i> Save
+          </button>
+            <div class="mdl-tooltip" data-mdl-for="btnSave">
+                Save Supplier
+            </div>
+            <button (click)="DeleteSupplier()" id="btnDelete" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised mdl-button--delete ">
+              <i class="material-icons">delete</i> Delete
+            </button>
+            <div class="mdl-tooltip" data-mdl-for="btnDelete">
+                Delete Supplier
+            </div>
+            <button (click)="BacktoSearchSupplier()" id="btnBackSearch" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised mdl-button--back2search ">
+            <i class="material-icons">reply</i> Search
+          </button>
+            <div class="mdl-tooltip" data-mdl-for="btnBackSearch">
+                Back to Search
+            </div>
+            <button (click)="ExitSupplier()" id="btnExit" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised mdl-button--exit ">
+              <i class="material-icons">exit_to_app</i> Exit
+            </button>
+            <div class="mdl-tooltip" data-mdl-for="btnExit">
+                Exit Supplier
+            </div>
+        </div>
+        <div class="mdl-cell mdl-cell--6-col">
+            <ul class="demo-list-control mdl-list">
+                <li class="mdl-list__item">
+                    <span class="mdl-list__item-primary-content">
+                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                  <input class="mdl-textfield__input" type="text" id="supplierCode"
+                  [(ngModel)]="Supplier.SupplierCode">
+                  <label class="mdl-textfield__label" for="sample1">Supplier Code</label>
+                </div>
+              </span>
+                </li>
+                <li class="mdl-list__item">
+                    <span class="mdl-list__item-primary-content">
+                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                  <input class="mdl-textfield__input" type="text" id="uomNameTh"
+                  [(ngModel)]="Supplier.SupplierNameTh" >
+                  <label class="mdl-textfield__label" for="sample1">Supplier Name Th</label>
+                </div>
+              </span>
+                </li>
+                <li class="mdl-list__item">
+                    <span class="mdl-list__item-primary-content">
+                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                  <input class="mdl-textfield__input" type="text" id="uomNameEn"
+                  [(ngModel)]="Supplier.SupplierNameEn" >
+                  <label class="mdl-textfield__label" for="sample1">Supplier Name En</label>
+                </div>
+              </span>
+                </li>
+                <li class="mdl-list__item">
+                    <span class="mdl-list__item-primary-content">
+                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                  <input class="mdl-textfield__input" type="text" id="uomNameCn"
+                  [(ngModel)]="Supplier.ProductTypeNameCn" >
+                  <label class="mdl-textfield__label" for="sample1">Supplier Name Cn</label>
+                </div>
+              </span>
+                </li>
+                <li class="mdl-list__item">
+                    <span class="mdl-list__item-primary-content">
+                    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                      <input class="mdl-textfield__input" type="text" id="description"
+                      [(ngModel)]="Supplier.Description" >
+                      <label class="mdl-textfield__label" for="sample1">Description</label>
+                    </div>
+                  </span>
+                </li>
+                <li class="mdl-list__item">
+                    <span class="mdl-list__item-primary-content">
+                  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                    <input class="mdl-textfield__input" type="text" id="telNo"
+                    [(ngModel)]="Supplier.TelNo" >
+                    <label class="mdl-textfield__label" for="sample1">Tel No</label>
+                  </div>
+                </span>
+                </li>
+                <li class="mdl-list__item">
+                    <span class="mdl-list__item-primary-content">
+                    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                      <input class="mdl-textfield__input" type="text" id="faxNo"
+                      [(ngModel)]="Supplier.FaxNo" >
+                      <label class="mdl-textfield__label" for="sample1">Fax No</label>
+                    </div>
+                  </span>
+                </li>
+                <li class="mdl-list__item">
+                    <span class="mdl-list__item-primary-content">
+                    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                      <input class="mdl-textfield__input" type="text" id="mobileNo"
+                      [(ngModel)]="Supplier.MobileNo" >
+                      <label class="mdl-textfield__label" for="sample1">Mobile No</label>
+                    </div>
+                  </span>
+                </li>
+                <li class="mdl-list__item">
+                    <span class="mdl-list__item-primary-content">
+                  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                    <input class="mdl-textfield__input" type="text" id="uomNameCn"
+                    [(ngModel)]="Supplier.Email" >
+                    <label class="mdl-textfield__label" for="sample1">Email</label>
+                  </div>
+                </span>
+                </li>
+                <li class="mdl-list__item">
+                    <span class="mdl-list__item-primary-content">
+                  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                    <input class="mdl-textfield__input" type="text" id="uomNameCn"
+                    [(ngModel)]="Supplier.PaymentTypeCode" >
+                    <label class="mdl-textfield__label" for="sample1">PaymentTypeCode</label>
+                  </div>
+                </span>
+                </li>
+                <li class="mdl-list__item">
+                    <span class="mdl-list__item-primary-content">
+                  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                    <input class="mdl-textfield__input" type="text" id="paymentDescription"
+                    [(ngModel)]="Supplier.PaymentDescription" >
+                    <label class="mdl-textfield__label" for="sample1">Payment Description</label>
+                  </div>
+                </span>
+                </li>
+                <li class="mdl-list__item">
+                    <span class="mdl-list__item-primary-content">
+                  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                    <input class="mdl-textfield__input" type="text" id="taxId"
+                    [(ngModel)]="Supplier.TaxId" >
+                    <label class="mdl-textfield__label" for="sample1">Tax Id</label>
+                  </div>
+                </span>
+                </li>
+                <li class="mdl-list__item">
+                    <span class="mdl-list__item-primary-content">
+                  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                    <input class="mdl-textfield__input" type="text" id="vatRate"
+                    [(ngModel)]="Supplier.VatRate" >
+                    <label class="mdl-textfield__label" for="sample1">Vat Rate</label>
+                  </div>
+                </span>
+                </li>
+                <li class="mdl-list__item">
+                    <span class="mdl-list__item-primary-content">
+                  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                    <input class="mdl-textfield__input" type="text" id="supplierAddress"
+                    [(ngModel)]="Supplier.SupplierAddress" >
+                    <label class="mdl-textfield__label" for="sample1">Supplier Address</label>
+                  </div>
+                </span>
+                </li>
+            </ul>
+        </div>
+        <div class="mdl-cell mdl-cell--6-col">
+            <ul class="demo-list-control mdl-list">
+                <li class="mdl-list__item">
+                    <span class="mdl-list__item-primary-content">
+                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                  <input class="mdl-textfield__input text-readonly" type="text" id="createBy"
+                  [(ngModel)]="Supplier.CreateBy" [readonly]="true">
+                  <label class="mdl-textfield__label" for="sample1">Create By</label>
+                </div>
+              </span>
+                </li>
+                <li class="mdl-list__item">
+                    <span class="mdl-list__item-primary-content">
+                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                  <input class="mdl-textfield__input text-readonly" type="text" id="createDate"
+                  [(ngModel)]="Supplier.CreateDate" [readonly]="true">
+                  <label class="mdl-textfield__label" for="sample1">Create Date</label>
+                </div>
+              </span>
+                </li>
+                <li class="mdl-list__item">
+                    <span class="mdl-list__item-primary-content">
+                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                  <input class="mdl-textfield__input text-readonly" type="text" id="updateBy"
+                  [(ngModel)]="Supplier.UpdateBy" [readonly]="true">
+                  <label class="mdl-textfield__label" for="sample1">Update By</label>
+                </div>
+              </span>
+                </li>
+                <li class="mdl-list__item">
+                    <span class="mdl-list__item-primary-content">
+                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                  <input class="mdl-textfield__input text-readonly" type="text" id="updateDate"
+                  [(ngModel)]="Supplier.UpdateDate" [readonly]="true">
+                  <label class="mdl-textfield__label" for="sample1">Update Date</label>
+                </div>
+              </span>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
