add icon to make add to home screen

--- a/src/app/components/uom/search-uom/search-uom.component.html
+++ b/src/app/components/uom/search-uom/search-uom.component.html
@@ -1,4 +1,8 @@
 <div class="mdl-grid demo-content">
+    <ol class="breadcrumb menu-site-map">
+        <li class="breadcrumb-item"><a href="/main">Home</a></li>
+        <li class="breadcrumb-item active">Sector</li>
+    </ol>
     <div class="demo-charts mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid">
         <div class="demo-updates mdl-card mdl-shadow--2dp mdl-cell mdl-cell--4-col mdl-cell--12-col-tablet mdl-cell--12-col-desktop">
             <div class="mdl-card__title mdl-card--expand mdl-color--deep-purple-500">
