--- a/src/app/components/posofsale-detail/posofsale-detail.component.html
+++ b/src/app/components/posofsale-detail/posofsale-detail.component.html
@@ -1,5 +1,5 @@
-<div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
-    <!-- Colored FAB button with ripple -->
+<div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
+
     <header class="demo-header mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600">
         <div class="mdl-layout__header-row pos-header">
             <span class="mdl-layout-title">สร้างใบขายสินค้าหน้าร้าน</span>
@@ -44,7 +44,12 @@
             </div>
         </div>
     </header>
+
     <main class="mdl-color--grey-100">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="#">หน้าหลัก</a></li>
+            <li class="breadcrumb-item active">ใบเสนอราคา</li>
+        </ol>
         <div class="mdl-grid demo-content">
             <div class="demo-charts mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid">
                 <div class="search-customer-label">ค้นหาลูกค้า</div>
