--- a/src/app/components/product-type/edit-product-type/edit-product-type.component.html
+++ b/src/app/components/product-type/edit-product-type/edit-product-type.component.html
@@ -1,7 +1,7 @@
 <div class="mdl-grid demo-content">
     <div class="demo-charts mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid">
         <div class="demo-options mdl-card mdl-color--deep-purple-500 mdl-shadow--2dp mdl-cell mdl-cell--4-col
-         mdl-cell--12-col-tablet mdl-cell--12-col-desktop header-section">
+         mdl-cell--12-col-tablet mdl-cell--12-col-desktop edit-header-section">
             <h4 class="header-detail">Product Type Details</h4>
         </div>
         <div class="mdl-cell mdl-cell--12-col">
