--- a/src/app/components/customer-type/edit-customer-type/edit-customer-type.component.html
+++ b/src/app/components/customer-type/edit-customer-type/edit-customer-type.component.html
@@ -1,3 +1,120 @@
-<p>
-  edit-customer-type works!
-</p>
+<div class="mdl-grid demo-content">
+    <div class="demo-charts mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid">
+        <div class="demo-options mdl-card mdl-color--deep-purple-500 mdl-shadow--2dp mdl-cell mdl-cell--4-col
+       mdl-cell--12-col-tablet mdl-cell--12-col-desktop edit-header-section">
+            <h4 class="header-detail">Customer Type Details</h4>
+        </div>
+        <div class="mdl-cell mdl-cell--12-col">
+            <button (click)="NewCustomerType()" id="btnNew" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised mdl-button--add ">
+              <i class="material-icons">create</i> New
+            </button>
+            <div class="mdl-tooltip" data-mdl-for="btnNew">
+                New Customer Type
+            </div>
+            <button (click)="SaveCustomerType()" id="btnSave" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised mdl-button--save ">
+            <i class="material-icons">save</i> Save
+          </button>
+            <div class="mdl-tooltip" data-mdl-for="btnSave">
+                Save Customer Type
+            </div>
+            <button (click)="DeleteCustomerType()" id="btnDelete" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised mdl-button--delete ">
+              <i class="material-icons">delete</i> Delete
+            </button>
+            <div class="mdl-tooltip" data-mdl-for="btnDelete">
+                Delete Customer Type
+            </div>
+            <button (click)="BacktoSearchCustomerType()" id="btnBackSearch" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised mdl-button--back2search ">
+            <i class="material-icons">reply</i> Search
+          </button>
+            <div class="mdl-tooltip" data-mdl-for="btnBackSearch">
+                Back to Search
+            </div>
+            <button (click)="ExitCustomerType()" id="btnExit" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised mdl-button--exit ">
+              <i class="material-icons">exit_to_app</i> Exit
+            </button>
+            <div class="mdl-tooltip" data-mdl-for="btnExit">
+                Exit Customer Type
+            </div>
+        </div>
+        <div class="mdl-cell mdl-cell--6-col">
+            <ul class="demo-list-control mdl-list">
+                <li class="mdl-list__item">
+                    <span class="mdl-list__item-primary-content">
+                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                  <input class="mdl-textfield__input" type="text" id="uomCode"
+                  [(ngModel)]="CustomerType.CustomerTypeCode" >
+                  <label class="mdl-textfield__label" for="sample1">Customer Type Code</label>
+                </div>
+              </span>
+                </li>
+                <li class="mdl-list__item">
+                    <span class="mdl-list__item-primary-content">
+                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                  <input class="mdl-textfield__input" type="text" id="uomNameTh"
+                  [(ngModel)]="CustomerType.CustomerTypeNameTh" >
+                  <label class="mdl-textfield__label" for="sample1">Customer Type Name Th</label>
+                </div>
+              </span>
+                </li>
+                <li class="mdl-list__item">
+                    <span class="mdl-list__item-primary-content">
+                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                  <input class="mdl-textfield__input" type="text" id="uomNameEn"
+                  [(ngModel)]="ProductType.ProductTypeNameEn" >
+                  <label class="mdl-textfield__label" for="sample1">Customer Type Name En</label>
+                </div>
+              </span>
+                </li>
+                <li class="mdl-list__item">
+                    <span class="mdl-list__item-primary-content">
+                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                  <input class="mdl-textfield__input" type="text" id="uomNameCn"
+                  [(ngModel)]="CustomerType.CustomerTypeNameCn" >
+                  <label class="mdl-textfield__label" for="sample1">Customer Type Name Cn</label>
+                </div>
+              </span>
+                </li>
+            </ul>
+        </div>
+        <div class="mdl-cell mdl-cell--6-col">
+            <ul class="demo-list-control mdl-list">
+                <li class="mdl-list__item">
+                    <span class="mdl-list__item-primary-content">
+                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                  <input class="mdl-textfield__input text-readonly" type="text" id="createBy"
+                  [(ngModel)]="CustomerType.CreateBy" [readonly]="true">
+                  <label class="mdl-textfield__label" for="sample1">Create By</label>
+                </div>
+              </span>
+                </li>
+                <li class="mdl-list__item">
+                    <span class="mdl-list__item-primary-content">
+                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                  <input class="mdl-textfield__input text-readonly" type="text" id="createDate"
+                  [(ngModel)]="CustomerType.CreateDate" [readonly]="true">
+                  <label class="mdl-textfield__label" for="sample1">Create Date</label>
+                </div>
+              </span>
+                </li>
+                <li class="mdl-list__item">
+                    <span class="mdl-list__item-primary-content">
+                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                  <input class="mdl-textfield__input text-readonly" type="text" id="updateBy"
+                  [(ngModel)]="CustomerType.UpdateBy" [readonly]="true">
+                  <label class="mdl-textfield__label" for="sample1">Update By</label>
+                </div>
+              </span>
+                </li>
+                <li class="mdl-list__item">
+                    <span class="mdl-list__item-primary-content">
+                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                  <input class="mdl-textfield__input text-readonly" type="text" id="updateDate"
+                  [(ngModel)]="CustomerType.UpdateDate" [readonly]="true">
+                  <label class="mdl-textfield__label" for="sample1">Update Date</label>
+                </div>
+              </span>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
