--- a/src/app/components/customer-type/search-customer-type/search-customer-type.component.html
+++ b/src/app/components/customer-type/search-customer-type/search-customer-type.component.html
@@ -1,3 +1,62 @@
-<p>
-  search-customer-type works!
-</p>
+<div class="mdl-grid demo-content">
+    <div class="demo-charts mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid">
+        <div class="demo-updates mdl-card mdl-shadow--2dp mdl-cell mdl-cell--4-col mdl-cell--12-col-tablet mdl-cell--12-col-desktop">
+            <div class="mdl-card__title mdl-card--expand mdl-color--deep-purple-500 search-header-section">
+                <h2 class="mdl-card__title-text">Search Customer Type Information</h2>
+            </div>
+            <div class="mdl-card__supporting-text mdl-color-text--grey-600">
+                <div class="mdl-cell mdl-cell--12-col">
+                    <button (click)="NewCustomerType()" id="btnNew" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised mdl-button--add ">
+                    <i class="material-icons">create</i> New
+                  </button>
+                    <div class="mdl-tooltip" data-mdl-for="btnNew">
+                        New Customer type
+                    </div>
+                    <button (click)="ExitCustomerType()" id="btnExit" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised mdl-button--exit ">
+                  <i class="material-icons">exit_to_app</i> Exit
+                </button>
+                    <div class="mdl-tooltip" data-mdl-for="btnExit">
+                        Exit Customer type
+                    </div>
+                </div>
+                <form action="#">
+                    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                        <input class="mdl-textfield__input" type="text" id="searchCustomerType" [(ngModel)]="searchProductType" [ngModelOptions]="{standalone: true}">
+                        <label class="mdl-textfield__label" for="sample1">Search Customer Type...</label>
+                    </div>
+                    <button (click)="SearchCustomerType()" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored ">
+                    <i class="material-icons">search</i> Search
+                  </button>
+                </form>
+            </div>
+        </div>
+        <div class="demo-separator mdl-cell--1-col"></div>
+        <div class="demo-options mdl-card mdl-color--deep-purple-500 mdl-shadow--2dp mdl-cell mdl-cell--4-col mdl-cell--12-col-tablet mdl-cell--12-col-desktop">
+            <div class="mdl-card__supporting-text mdl-color-text--blue-grey-50 search-header-section">
+                <h4>Search Customer Type Results</h4>
+            </div>
+            <table class="mdl-data-table mdl-js-data-table search-table">
+                <thead>
+                    <tr>
+                        <th class="mdl-data-table__cell--non-numeric"></th>
+                        <th class="mdl-data-table__cell--non-numeric">Code</th>
+                        <th class="mdl-data-table__cell--non-numeric">Name Th</th>
+                        <th class="mdl-data-table__cell--non-numeric">Name En</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let customerType of searchCustomerTypeList">
+                        <td class="mdl-data-table__cell--non-numeric">
+                            <a [routerLink]="['/main', {outlets: {'main-detail': ['edit-customer-type', customerType.$key]}}]">
+                                <i class="material-icons">create</i>
+                            </a>
+                        </td>
+                        <td class="mdl-data-table__cell--non-numeric">{{customerType.CustomerTypeCode}}</td>
+                        <td class="mdl-data-table__cell--non-numeric">{{customerType.CustomerTypeNameTh}}</td>
+                        <td class="mdl-data-table__cell--non-numeric">{{customerType.CustomerTypeNameEn}}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
