--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -60,16 +60,16 @@
                 <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">local_offer</i> Acc. Receivable
             </a>
             <a class="mdl-navigation__link left-side-tab-menu" (click)="SelectStock()">
-                <i class="fa fa-cubes fa-2x" aria-hidden="true" role="presentation"></i> Stocks
+                <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">dashboard</i> Stocks
             </a>
             <a class="mdl-navigation__link left-side-tab-menu" (click)="SelectHumanResource()">
                 <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">supervisor_account</i> Human Resource
             </a>
-            <a class="mdl-navigation__link li-link" [routerLink]="['/main', {outlets: {'main-detail': ['search-customer']}}]">
-                <i class="fa fa-bar-chart-o fa-2x" aria-hidden="true" role="presentation"></i> Report
+            <a class="mdl-navigation__link left-side-tab-menu" (click)="SelectReport()">
+                <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">receipt</i> Report
             </a>
-            <a class="mdl-navigation__link li-link" (click)="SelectSetting()">
-                <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">setting</i> Setting
+            <a class="mdl-navigation__link left-side-tab-menu" (click)="SelectSetting()">
+                <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">settings</i> Setting
             </a>
             <div class="mdl-layout-spacer"></div>
             <a class="mdl-navigation__link" href="">
@@ -82,4 +82,7 @@
     <main class="mdl-layout__content mdl-color--grey-100 main-background">
         <router-outlet name="main-detail"></router-outlet>
     </main>
+    <nav class="navbar navbar-fixed-bottom navbar-light bg-faded">
+        <a class="navbar-brand" href="#">Fixed bottom</a>
+    </nav>
 </div>
