--- a/src/app/components/product-type/search-product-type/search-product-type.component.html
+++ b/src/app/components/product-type/search-product-type/search-product-type.component.html
@@ -1,7 +1,7 @@
 <div class="mdl-grid demo-content">
     <div class="demo-charts mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid">
         <div class="demo-updates mdl-card mdl-shadow--2dp mdl-cell mdl-cell--4-col mdl-cell--12-col-tablet mdl-cell--12-col-desktop">
-            <div class="mdl-card__title mdl-card--expand mdl-color--deep-purple-500">
+            <div class="mdl-card__title mdl-card--expand mdl-color--deep-purple-500 search-header-section">
                 <h2 class="mdl-card__title-text">Search Product Type Information</h2>
             </div>
             <div class="mdl-card__supporting-text mdl-color-text--grey-600">
@@ -32,7 +32,7 @@
         </div>
         <div class="demo-separator mdl-cell--1-col"></div>
         <div class="demo-options mdl-card mdl-color--deep-purple-500 mdl-shadow--2dp mdl-cell mdl-cell--4-col mdl-cell--12-col-tablet mdl-cell--12-col-desktop">
-            <div class="mdl-card__supporting-text mdl-color-text--blue-grey-50 header-section">
+            <div class="mdl-card__supporting-text mdl-color-text--blue-grey-50 search-header-section">
                 <h4>Search Product Type Results</h4>
             </div>
             <table class="mdl-data-table mdl-js-data-table search-table">
